--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,21 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.1.2</version>
         </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+                <source>21</source>
+                <target>21</target>
+            </configuration>
+        </plugin>
+
     </plugins>
+
+
+
     </build>
 
 
